# OpenGLBenchmark

./: .gitmodules  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/openglbenchmark/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: shader.frag  shader.vert
app/src/main/assets/sponza/: sponza.mtl
app/src/main/cpp/: CMakeLists.txt  camera.h  mesh.h  model.h  native-lib.cpp  opengl-renderer.cpp  shader.h
app/src/main/cpp/glad/: CMakeLists.txt
app/src/main/cpp/glad/include/glad/: glad.h
app/src/main/cpp/glad/src/: glad.c
app/src/main/java/com/example/openglbenchmark/: MainActivity.kt  TestGLRenderer.kt  TestGLSurfaceView.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/openglbenchmark/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
